# Homework

./: .gitignore
homework-latex-template/: doc.tex
machine_vision/discuss1/: doc.tex  reference.bib
machine_vision/discuss2/: doc.tex  reference.bib
machine_vision/prog1/: .gitignore  CMakeLists.txt
machine_vision/prog1/docs/: config.tgn  homework.tex
machine_vision/prog1/src/: CMakeLists.txt  main.cpp
machine_vision/prog1/src/include/: colour.h  entity.h  extractor.h  utils.hpp
machine_vision/prog1/src/src/: entity.cpp  extractor.cpp
machine_vision/prog2/: .gitignore  CMakeLists.txt
machine_vision/prog2/camera-correction/: conf.py
machine_vision/prog2/docs/: doc.tex  reference.bib
machine_vision/prog2/src/: CMakeLists.txt  main.cpp
math_modeling/: graph.drawio  math_modeling.tex
math_modeling/2023研究生数学建模竞赛LaTeX模板/GMCMthesis-master/: example.tex  ref.bib
navation_guide/: doc.tex  reference.bib
numerical_analysis/2023202140019-陈烁龙-大作业3(拉格朗日插值)/prog3/script/: plt_utils.py
numerical_analysis/exercise/: doc.tex
numerical_analysis/prog1/: .gitignore  CMakeLists.txt
numerical_analysis/prog1/docs/: doc.tex
numerical_analysis/prog1/docs/tab/: cg.tgn
numerical_analysis/prog1/script/: drawer.py  plt_utils.py  update.py
numerical_analysis/prog1/src/: CMakeLists.txt  main.cpp
numerical_analysis/prog1/src/include/: conj_grad.h  lu_factorization.h  steep_desc.h
numerical_analysis/prog1/src/src/: conj_grad.cpp  lu_factorization.cpp  steep_desc.cpp
numerical_analysis/prog2/docs/: doc.tex
numerical_analysis/prog2/src/: main.cpp
numerical_analysis/prog2/src/include/: lasso.h  log_regression.h  sampling.hpp
numerical_analysis/prog2/src/src/: lasso.cpp  (+1 more)
numerical_analysis/prog3/docs/: doc.tex
numerical_analysis/prog3/src/: main.cpp
numerical_analysis/prog4/data/: func1.tgn  func2.tgn
numerical_analysis/prog4/docs/: doc.tex
numerical_analysis/prog4/script/: drawer.py  integration.py
numerical_analysis/prog4/src/: main.cpp
optimal_estimation/: homework.tex
optimal_estimation/prog/: .gitignore  CMakeLists.txt
optimal_estimation/prog/config/: config.xml
optimal_estimation/prog/docs/: prog.tex
optimal_estimation/prog/script/: results.py
optimal_estimation/prog/src/: CMakeLists.txt  main.cpp
optimal_estimation/work1/: homework1.tex
optimal_estimation/work2/: homework2.tex
optimal_estimation/work3/: homework.tex
stochastic_process/: doc.tex
(+30 files in other folders)
